fix: service spacing

--- a/app/components/BurgerNav/BurgerNav.module.scss
+++ b/app/components/BurgerNav/BurgerNav.module.scss
@@ -91,7 +91,14 @@
 .languagePicker {
     margin: 8px 0px 24px 0px;
 }
-
+.pilzEng {
+  width: 100px;
+  height: 40px;
+}
+.pilzGeo {
+  width: 120px;
+  height: 40px;
+}
 
 
   
